yaml/traefik/traefik-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.1.1
          args:
            - --api.insecure
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
      tolerations:
      - effect: NoSchedule
        operator: Exists
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: kube-system
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30100
      targetPort: dashboard
      name: dashboard
      protocol: TCP
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: kube-system
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30200
    port: 80
    targetPort: web
    protocol: TCP
  selector:
    app: traefik
