yaml/traefik/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.example.com`)
    kind: Rule
    services:
      - name: traefik
        namespace: traefik
        port: 9000
